2008-02-03 Added BoundaryNorm, with examples in colorbar_only.py
           and image_masked.py. - EF

2008-02-03 Force dpi=72 in pdf backend to fix picture size bug. - JKS

2008-02-01 Fix reference leak in ft2font Glyph objects. - MGD

2008-01-31 Don't use unicode strings with usetex by default - DSD

2008-01-31 Fix text spacing problems in PDF backend with *some* fonts,
           such as STIXGeneral.

2008-01-31 Fix \sqrt with radical number (broken by making [ and ]
           work below) - MGD

2008-01-27 Applied  Martin Teichmann's patch to improve the Qt4
           backend. Uses Qt's builtin toolbars and statusbars.
           See bug 1828848 - DSD

2008-01-10 Moved toolkits to mpl_toolkits, made mpl_toolkits
           a namespace package - JSWHIT

2008-01-10 Use setup.cfg to set the default parameters (tkagg,
           numpy) when building windows installers - DSD

2008-01-10 Fix bug displaying [ and ] in mathtext - MGD

2008-01-10 Fix bug when displaying a tick value offset with scientific
           notation. (Manifests itself as a warning that the \times
           symbol can not be found). - MGD

2008-01-10 Use setup.cfg to set the default parameters (tkagg,
           numpy) when building windows installers - DSD

===============================================================
2008-01-06 Released 0.91.2 at revision 4802

2007-12-26 Reduce too-late use of matplotlib.use() to a warning
           instead of an exception, for backwards compatibility - EF

2007-12-25 Fix bug in errorbar, identified by Noriko Minakawa - EF

2007-12-25 Changed masked array importing to work with the upcoming
           numpy 1.05 (now the maskedarray branch) as well as with
           earlier versions. - EF

2007-12-16 rec2csv saves doubles without losing precision. Also, it
           does not close filehandles passed in open. - JDH,ADS

2007-12-13 Moved rec2gtk to matplotlib.toolkits.gtktools and rec2excel
           to matplotlib.toolkits.exceltools - JDH
